# dagfs

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  flake.nix  pyproject.toml
dagfs/: __init__.py
scripts/: airflow  dagfs.down  dagfs.init  dagfs.up  sandbox.clean  sandbox.init
src/dagfs/: __init__.py  xcom_backend.py
src/dagfs/example_dags/: hello_world.py
tests/: test_provider.py
