[tool.poetry]
name = "dagfs"
description = "A dependency-aware 'filesystem' for use with Apache Airflow"
authors = ["Matt Rixman <matt@astronomer.io>"]
license = "License :: OSI Approved :: Apache Software License"
version = "0.1.0"
packages = [{include = "dagfs", from = "."}]
[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.7"

[tool.black]
line-length = 110
target-version = ['py37']
skip-string-normalization = true

[tool.flake8]
max-line-length = 110
ignore = ["E401", "E302", "E305", "E266", "W503", "E127", "E241", "E128", "E201", "E203", "E202", "F811", "E501"]
